--- a/build.yml
+++ b/build.yml
@@ -1,11 +1,11 @@
---- 
-extensions: 
+---
+extensions:
 - json
 - barcode
-name: barcode-signature
-capabilities: 
+name: Barcode Recognizer
+capabilities:
 - camera
-wp: 
+wp:
   productid: feeb1b70-d13e-012e-2d10-60c54789b794
 bbver: 4.6
 sdk: /Users/bhanu/.gems/gems/rhodes-3.1.0
@@ -13,15 +13,17 @@ applog: rholog.txt
 build: debug
 wmsdk: Windows Mobile 6 Professional SDK (ARMV4I)
 version: 1.0
-symbian: 
+symbian:
   uid: "0xebe3152e"
 vendor: rhomobile
 sdkversion: 3.1.0
-iphone: 
-  BundleURLScheme: barcode-signature
-  provisionprofile: 
-  BundleIdentifier: com.rhomobile.barcode-signature
+iphone:
+  BundleURLScheme: barcode-recognizer
+  provisionprofile:
+  BundleIdentifier: com.rhomobile.barcode-recognizer
   sdk: iphonesimulator4.3
-  entitlements: 
-  codesignidentity: 
+  entitlements:
+  codesignidentity:
   configuration: Release
+android:
+  version: 2.3.3
